@@ -373,6 +373,16 @@ initcups (void)
   INT_CONSTANT (HTTP_ENCRYPT_REQUIRED);
   INT_CONSTANT (HTTP_ENCRYPT_ALWAYS);
 
+  // Selected HTTP status codes
+  INT_CONSTANT (HTTP_ERROR);
+  INT_CONSTANT (HTTP_OK);
+  INT_CONSTANT (HTTP_BAD_REQUEST);
+  INT_CONSTANT (HTTP_UNAUTHORIZED);
+  INT_CONSTANT (HTTP_NOT_FOUND);
+  INT_CONSTANT (HTTP_REQUEST_TIMEOUT);
+  INT_CONSTANT (HTTP_UPGRADE_REQUIRED);
+  INT_CONSTANT (HTTP_SERVER_ERROR);
+
   // PPD UI enum
   INT_CONSTANT (PPD_UI_BOOLEAN);
   INT_CONSTANT (PPD_UI_PICKONE);
