@@ -1,3 +1,7 @@
+2006-05-25  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsmodule.c (initcups): Selected HTTP status codes.
+
 2006-05-16  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsppd.c (PPD_writeFd): Follow upstream behaviour for
